--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@polymer/polymer": "^3.3.1",
     "child-process-promise": "^2.2.1",
     "comlink": "^4.2.0",
+    "mime-types": "^2.1.25",
     "mkdirp-promise": "^5.0.1",
     "nanoid": "^2.1.8"
   },
