--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@longlost/app-header-overlay": "^1.0.7",
     "@longlost/app-icons": "^1.0.11",
     "@longlost/app-modal": "^1.0.2",
-    "@longlost/app-shared-styles": "^2.0.4",
+    "@longlost/app-shared-styles": "^2.0.5",
     "@longlost/app-spinner": "^1.1.0",
     "@longlost/badged-icon-button": "^1.0.1",
     "@longlost/drag-drop-list": "^1.0.3",
@@ -34,6 +34,7 @@
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-iconset-svg": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-checkbox": "^3.1.0",
     "@polymer/paper-icon-button": "^3.0.2",
     "@polymer/paper-input": "^3.1.0",
     "@polymer/paper-progress": "^3.0.1",
