Pulled common events into an events-mixin file. Started work on file print and download functionality. Added print-js library.

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "comlink": "^4.2.0",
     "mime-types": "^2.1.25",
     "mkdirp-promise": "^5.0.1",
-    "nanoid": "^2.1.8"
+    "nanoid": "^2.1.8",
+    "print-js": "^1.0.63"
   },
   "devDependencies": {
     "@polymer/iron-demo-helpers": "^3.1.0",
