--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@polymer/iron-iconset-svg": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
     "@polymer/paper-checkbox": "^3.1.0",
+    "@polymer/paper-fab": "^3.0.1",
     "@polymer/paper-icon-button": "^3.0.2",
     "@polymer/paper-input": "^3.2.0",
     "@polymer/paper-progress": "^3.0.1",
