--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
   },
   "homepage": "https://github.com/longlost/app-file-system#readme",
   "dependencies": {
-    "@longlost/app-element": "^1.0.6",
-    "@longlost/app-header-overlay": "^1.0.7",
+    "@longlost/app-element": "^1.1.1",
     "@longlost/app-icons": "^1.0.11",
-    "@longlost/app-modal": "^1.1.0",
-    "@longlost/app-shared-styles": "^2.0.9",
-    "@longlost/app-spinner": "^1.1.0",
+    "@longlost/app-inputs": "^1.3.7",
+    "@longlost/app-overlays": "^1.0.2",
+    "@longlost/app-shared-styles": "^2.0.12",
+    "@longlost/app-spinner": "^1.1.1",
     "@longlost/badged-icon-button": "^1.1.1",
     "@longlost/drag-drop-list": "^1.1.0",
-    "@longlost/lambda": "^2.0.4",
+    "@longlost/lambda": "^2.2.0",
     "@longlost/lazy-image": "^1.1.3",
     "@longlost/lazy-video": "^2.3.1",
-    "@longlost/services": "^3.1.1",
+    "@longlost/services": "^3.1.2",
     "@longlost/utils": "^1.3.5",
     "@longlost/worker": "^3.0.4",
     "@polymer/iron-icon": "^3.0.1",
@@ -45,7 +45,7 @@
     "mime-types": "^2.1.26",
     "mkdirp-promise": "^5.0.1",
     "multi-download": "^3.0.0",
-    "nanoid": "^2.1.9",
+    "nanoid": "^2.1.11",
     "print-js": "^1.0.63"
   },
   "devDependencies": {
@@ -53,7 +53,7 @@
     "@polymer/test-fixture": "^4.0.2",
     "@webcomponents/webcomponentsjs": "^2.4.1",
     "chai": "^4.2.0",
-    "mocha": "^7.0.0",
+    "mocha": "^7.0.1",
     "wct-mocha": "^1.0.1"
   }
 }
