--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@longlost/app-inputs": "^1.3.8",
     "@longlost/app-map": "^1.4.1",
     "@longlost/app-overlays": "^1.0.2",
-    "@longlost/app-shared-styles": "^2.0.12",
+    "@longlost/app-shared-styles": "^2.0.13",
     "@longlost/app-spinner": "^1.1.1",
     "@longlost/badged-icon-button": "^1.1.1",
     "@longlost/drag-drop-list": "^1.1.0",
@@ -40,6 +40,7 @@
     "@polymer/paper-icon-button": "^3.0.2",
     "@polymer/paper-input": "^3.2.0",
     "@polymer/paper-progress": "^3.0.1",
+    "@polymer/paper-slider": "^3.0.1",
     "@polymer/polymer": "^3.3.1",
     "child-process-promise": "^2.2.1",
     "comlink": "^4.2.0",
