--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@longlost/services": "^3.1.2",
     "@longlost/utils": "^1.3.5",
     "@longlost/worker": "^3.0.4",
+    "@polymer/app-storage": "^3.0.3",
     "@polymer/iron-icon": "^3.0.1",
     "@polymer/iron-iconset-svg": "^3.0.1",
     "@polymer/paper-button": "^3.0.1",
