Now paginating camera roll items.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@longlost/app-shared-styles": "^2.0.13",
     "@longlost/app-spinner": "^1.1.1",
     "@longlost/badged-icon-button": "^1.1.1",
+    "@longlost/boot": "^1.2.3",
     "@longlost/drag-drop-list": "^1.1.0",
     "@longlost/lambda": "^2.2.0",
     "@longlost/lazy-image": "^1.1.3",
