--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@longlost/app-element": "^1.1.1",
     "@longlost/app-icons": "^1.0.11",
+    "@longlost/app-images": "^1.0.0",
     "@longlost/app-inputs": "^1.3.8",
     "@longlost/app-map": "^1.4.1",
     "@longlost/app-overlays": "^1.1.0",
@@ -28,7 +29,6 @@
     "@longlost/boot": "^1.2.3",
     "@longlost/drag-drop-list": "^2.0.2",
     "@longlost/lambda": "^2.2.0",
-    "@longlost/lazy-image": "^1.1.4",
     "@longlost/lazy-video": "^2.3.2",
     "@longlost/services": "^3.2.0",
     "@longlost/utils": "^1.3.5",
