Moved to using the public url to feed into ffmpeg instead of a signedURL since the public version doesn't require the extra steps to configure the GCP IAM roles to create signedURLs. Also, no longer overwriting the original version of images with the oriented version. This will double the storage needs, but will align the api with the video api - original, oriented, optimized, thumbnail urls. This will also allow for future processing of image metadata since it will now be preserved in the original file.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/longlost/app-file-system#readme",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@longlost/app-carousel": "^2.4.0",
     "@longlost/app-element": "^1.1.1",
     "@longlost/app-icons": "^1.0.11",
