--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@longlost/lazy-video": "^2.3.4",
     "@longlost/pinch-to-zoom": "^1.0.0",
     "@longlost/services": "^3.2.2",
+    "@longlost/tab-pages": "^1.0.1",
     "@longlost/utils": "^1.4.0",
     "@longlost/worker": "^3.0.4",
     "@polymer/app-storage": "^3.0.3",
