Many small qol improvements, including showing a loading spinner over image-editor content while loading an image anytime the editor is opened with an item that is different than the previous one. Added icons to cta buttons in image-editor save and reset modals. Changed photo-carousel from 2 sized header to a more compact single toolbar header. This was done to help layout for landscape orientation. Now hijacking all internally used events that are caught by event-mixin. Updated deprecated cloud.js mkdirp-promise package to mkdirp package.

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "comlink": "^4.3.0",
     "cropperjs": "^1.5.7",
     "mime-types": "^2.1.27",
-    "mkdirp-promise": "^5.0.1",
+    "mkdirp": "^1.0.4",
     "multi-download": "^3.0.0",
     "nanoid": "^3.1.9",
     "print-js": "^1.0.63"
