--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@longlost/tab-pages": "^1.0.2",
     "@longlost/utils": "^1.5.0",
     "@longlost/webgl-filter": "^1.0.0",
-    "@longlost/worker": "^4.0.0",
+    "@longlost/worker": "^4.0.1",
     "@polymer/app-storage": "^3.0.3",
     "@polymer/iron-a11y-keys": "^3.0.1",
     "@polymer/iron-icon": "^3.0.1",
@@ -56,6 +56,7 @@
     "child-process-promise": "^2.2.1",
     "comlink": "^4.3.0",
     "cropperjs": "^1.5.7",
+    "exifreader": "^3.12.0",
     "jimp": "^0.13.0",
     "mime-types": "^2.1.27",
     "mkdirp": "^1.0.4",
