Switched jimp image compression out for new wasm ImageMagick module. Updated deps.

--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "@longlost/services": "^3.2.3",
     "@longlost/tab-pages": "^1.0.2",
     "@longlost/utils": "^1.5.0",
+    "@longlost/wasm-imagemagick": "^2.0.1",
     "@longlost/webgl-filter": "^1.0.0",
-    "@longlost/worker": "^4.0.2",
+    "@longlost/worker": "^5.0.0",
     "@polymer/app-storage": "^3.0.3",
     "@polymer/iron-a11y-keys": "^3.0.1",
     "@polymer/iron-icon": "^3.0.1",
@@ -57,7 +58,6 @@
     "comlink": "^4.3.0",
     "cropperjs": "^1.5.7",
     "exifreader": "^3.12.0",
-    "jimp": "^0.13.0",
     "mime-types": "^2.1.27",
     "mkdirp": "^1.0.4",
     "multi-download": "^3.0.0",
