--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "@longlost/drag-drop-list": "^2.0.2",
     "@longlost/lambda": "^2.2.0",
     "@longlost/lazy-video": "^2.3.4",
+    "@longlost/paper-gauge": "^1.0.1",
     "@longlost/pinch-to-zoom": "^1.0.0",
     "@longlost/services": "^3.2.3",
     "@longlost/tab-pages": "^1.0.2",
-    "@longlost/utils": "^1.5.0",
+    "@longlost/utils": "^1.5.1",
     "@longlost/wasm-imagemagick": "^2.1.0",
     "@longlost/webgl-filter": "^1.0.0",
     "@longlost/worker": "^5.0.1",
@@ -67,7 +68,7 @@
   "devDependencies": {
     "@polymer/iron-demo-helpers": "^3.1.0",
     "@polymer/test-fixture": "^4.0.2",
-    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "@webcomponents/webcomponentsjs": "^2.4.4",
     "chai": "^4.2.0",
     "mocha": "^8.0.1",
     "wct-mocha": "^1.1.0"
