--- a/package.json
+++ b/package.json
@@ -19,27 +19,21 @@
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.0.20",
     "@longlost/afs-custom-exifreader": "^1.0.0",
-    "@longlost/app-carousels": "^1.0.2",
-    "@longlost/app-element": "^2.0.0",
-    "@longlost/app-icons": "^1.0.12",
-    "@longlost/app-images": "^1.8.3",
-    "@longlost/app-inputs": "^1.4.3",
-    "@longlost/app-map": "^1.4.6",
-    "@longlost/app-overlays": "^1.3.9",
-    "@longlost/app-shared-styles": "^2.0.15",
-    "@longlost/app-shell": "^2.2.4",
-    "@longlost/app-spinner": "^1.2.0",
-    "@longlost/badged-icon-button": "^1.1.2",
-    "@longlost/drag-drop-list": "^2.0.4",
-    "@longlost/lambda": "^2.2.0",
-    "@longlost/lazy-video": "^2.5.0",
-    "@longlost/paper-gauge": "^1.0.1",
-    "@longlost/pinch-to-zoom": "^1.1.0",
-    "@longlost/tab-pages": "^1.2.0",
-    "@longlost/utils": "^2.0.1",
+    "@longlost/app-carousels": "^1.0.3",
+    "@longlost/app-core": "^1.0.0",
+    "@longlost/app-images": "^1.8.4",
+    "@longlost/app-inputs": "^2.0.0",
+    "@longlost/app-map": "^1.4.7",
+    "@longlost/app-overlays": "^1.3.10",
+    "@longlost/app-spinner": "^1.2.1",
+    "@longlost/badged-icon-button": "^1.1.3",
+    "@longlost/drag-drop-list": "^2.0.5",
+    "@longlost/lazy-video": "^2.5.1",
+    "@longlost/paper-gauge": "^1.0.2",
+    "@longlost/pinch-to-zoom": "^1.1.1",
+    "@longlost/tab-pages": "^1.2.1",
     "@longlost/wasm-imagemagick": "^2.2.0",
     "@longlost/webgl-filter": "^1.0.0",
-    "@longlost/worker": "^6.0.0",
     "@polymer/app-storage": "^3.0.3",
     "@polymer/iron-a11y-keys": "^3.0.1",
     "@polymer/iron-icon": "^3.0.1",
